fix: Add overflow to player position table

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -39,6 +39,8 @@ section {
 .table-container {
     justify-content: center;
     text-align: center;
+    height: 500px;
+    overflow-y: scroll;
 }
 
 /* Tables */
@@ -248,6 +250,7 @@ main {
     text-align: center;
     flex: 1 0 200px;
     margin: 10px;
+    background-color: #3a3a3a44;
 }
 
 .card-text {
